# portfolio

./: .gitignore  README.md
Certification project/: 01_data_preparation.sql  README.md  data_description.md
entertainment-app-unit-economics/: README.MD  entertainment-app-unit-economics.ipynb
food-delivery-dashboard-analysis/sql/: metrics.sql
food-delivery-growth-analysis/: README.md  food-delivery-growth-analysis.ipynb
marketplace-product-analysis/: 01_data_preparation.sql  02_analysis_and_ab_test.ipynb  README.md
trading-app-abtest/: README.md  pyproject.toml  trading-app-abtest.ipynb
