[tool.poetry]
name = "trading-app-abtest"
version = "0.1.0"
description = ""
authors = ["iamgm <iamgm@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
